--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~13.0.2",
     "expo-file-system": "~13.1.3",
     "expo-status-bar": "~1.2.0",
+    "expo-splash-screen": "~0.14.1",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -32,6 +33,7 @@
     "@rneui/themed": "^4.0.0-rc.3",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-reanimated": "^2.4.0",
+    "react-native-screens": "3.15.0c",
     "react-native-safe-area-context": "3.3.2",
     "react-native-web": "0.17.1",
     "react-redux": "^8.0.1",
