--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "expo": "^44.0.0",
     "expo-constants": "~13.0.2",
+    "expo-sqlite": "~10.1.0",
     "expo-file-system": "~13.1.3",
     "expo-status-bar": "~1.2.0",
     "expo-splash-screen": "~0.14.1",
