BSA-3 - add typeorm

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "react-native-screens": "3.15.0c",
     "react-native-safe-area-context": "3.3.2",
     "react-native-web": "0.17.1",
+    "react-native-sqlite-storage": "^6.0.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.7",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "@reduxjs/toolkit": "^1.8.1",
@@ -51,6 +54,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "@babel/core": "^7.12.9",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.2.2",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-react": "^7.23.2",
