--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,14 @@
   "compilerOptions": {
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react-native",
     "lib": [
-      "es2017"
+      "es2017",
+      "dom"
     ],
     "moduleResolution": "node",
     "noEmit": true,
