--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "eslint-plugin-react-native": "^3.10.0",
     "jest": "^28.1.3",
     "@types/jest": "^28.1.5",
+    "ts-jest": "^28.0.6",
+    "jest-create-mock-instance": "^2.0.0",
     "react-native-testing-library": "2.2.0"
   },
   "private": true
