--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-splash-screen": "~0.15.1",
     "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
+    "expo-constants": "~13.1.1",
     "expo-updates": "~0.11.7",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
