--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eject": "expo eject",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
-    "test": "jest",
+    "test": "jest --forceExit",
     "build": "npm run lint && npm run test",
     "build:android:develop": "npm run build && expo build:android --release-channel develop",
     "build:android:production": "npm run build && expo build:android --release-channel production",
@@ -66,8 +66,15 @@
     "jest": "^28.1.3",
     "@types/jest": "^28.1.5",
     "ts-jest": "^28.0.6",
+    "jest-expo": "^45.0.1",
     "jest-create-mock-instance": "^2.0.0",
     "react-native-testing-library": "2.2.0"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "private": true
 }
