--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "basketball-shootaround-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
@@ -19,56 +18,57 @@
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
-    "react-native-toast-message": "^2.1.5",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@rneui/base": "^4.0.0-rc.5",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
+    "expo-constants": "~13.1.1",
+    "expo-dev-client": "~1.0.1",
     "expo-file-system": "~14.0.0",
     "expo-splash-screen": "~0.15.1",
     "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
-    "expo-constants": "~13.1.1",
     "expo-updates": "~0.11.7",
-    "@react-navigation/native": "^6.0.11",
-    "@react-navigation/native-stack": "^6.7.0",
-    "@rneui/base": "^4.0.0-rc.5",
-    "redux": "^4.2.0",
-    "@reduxjs/toolkit": "^1.8.3",
+    "metro-minify-terser": "^0.71.3",
+    "moment": "^2.29.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.7",
-    "moment": "^2.29.4",
-    "metro-minify-terser": "^0.71.3"
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
-    "typescript": "^4.7.4",
-    "ts-node": "^10.9.1",
+    "@babel/core": "^7.12.9",
+    "@types/jest": "^28.1.5",
     "@types/react": "^18.0.15",
     "@types/react-native": "^0.69.3",
     "@types/react-test-renderer": "^18.0.0",
-    "@babel/core": "^7.12.9",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-transform-typescript-metadata": "^0.2.2",
-    "babel-jest": "^28.1.3",
-    "eslint": "^7.25.0",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^28.1.3",
+    "babel-plugin-transform-typescript-metadata": "^0.2.2",
+    "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-native": "^3.10.0",
     "jest": "^28.1.3",
-    "@types/jest": "^28.1.5",
-    "ts-jest": "^28.0.6",
-    "jest-expo": "^45.0.1",
     "jest-create-mock-instance": "^2.0.0",
-    "react-native-testing-library": "2.2.0"
+    "jest-expo": "^45.0.1",
+    "react-native-testing-library": "2.2.0",
+    "ts-jest": "^28.0.6",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   },
   "jest": {
     "preset": "jest-expo",
