--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
     "test": "jest --forceExit",
     "build": "npm run lint && npm run test",
-    "build:android:develop": "npm run build && expo build:android --release-channel develop",
-    "build:android:production": "npm run build && expo build:android --release-channel production",
+    "build:android:develop": "npm run build && eas build --platform android --profile development --non-interactive",
+    "build:android:production": "npm run build && eas build --platform android --profile production --non-interactive",
     "publish:develop": "npm run build && expo publish --release-channel develop",
     "publish:production": "npm run build && expo publish --release-channel production",
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.11",
-    "@react-navigation/native-stack": "^6.7.0",
-    "@reduxjs/toolkit": "^1.8.3",
-    "@rneui/base": "^4.0.0-rc.5",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-web": "0.17.7",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
+    "react-native-toast-message": "^2.1.5",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
     "expo-constants": "~13.1.1",
@@ -30,22 +34,18 @@
     "expo-splash-screen": "~0.15.1",
     "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.11.7",
-    "metro-minify-terser": "^0.71.3",
-    "moment": "^2.29.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
-    "react-native-toast-message": "^2.1.5",
-    "react-native-web": "0.17.7",
-    "react-redux": "^8.0.2",
+    "expo-updates": "^0.13.3",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@rneui/base": "^4.0.0-rc.5",
     "redux": "^4.2.0",
+    "@reduxjs/toolkit": "^1.8.3",
+    "react-redux": "^8.0.2",
     "redux-saga": "^1.1.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "moment": "^2.29.4",
+    "metro-minify-terser": "^0.71.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
