--- a/.github/workflows/expo-build-prod.yml
+++ b/.github/workflows/expo-build-prod.yml
@@ -15,10 +15,11 @@ jobs:
         name: running yarn install
         with:
           cmd: install
-      - uses: expo/expo-github-action@v6
+      - uses: expo/expo-github-action@v7
         name: adding Expo cli
         with:
-          expo-version: 4.x
+          expo-version: latest
+          eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
       - uses: borales/actions-yarn@v3.0.0
         name: running yarn publish
