--- a/.github/workflows/static-code-analysis.yml
+++ b/.github/workflows/static-code-analysis.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v2
         name: checking out code
       - uses: borales/actions-yarn@v3.0.0
-        name: running yarn install
+        name: yarn install
         with:
-          cmd: install # will run `yarn install` command
+          cmd: install
       - uses: borales/actions-yarn@v3.0.0
-        name: running yarn build
+        name: yarn build
         with:
-          cmd: build # will run `yarn build` command
+          cmd: build
