--- a/.github/workflows/expo-build-dev.yml
+++ b/.github/workflows/expo-build-dev.yml
@@ -9,20 +9,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-        name: checking out code
-      - uses: expo/expo-github-action@v7
-        name: adding Expo cli
+      - name: 🏗 Checkout code
+        uses: actions/checkout@v2
+
+      - name: 🏗 Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+          cache: yarn
+
+      - name: 🏗 Setup Expo and EAS
+        uses: expo/expo-github-action@v7
         with:
           expo-version: latest
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
-          packager: yarn
-      - uses: borales/actions-yarn@v3.0.0
-        name: running yarn install
-        with:
-          cmd: install
-      - uses: borales/actions-yarn@v3.0.0
-        name: running yarn publish
-        with:
-          cmd: build:android:develop
+
+      - name: 📦 Install dependencies
+        run: yarn install
+
+      - name: 📦 Run tests
+        run: yarn build
+
+      - name: 🚀 Build app
+        run: eas build --platform android --profile development --non-interactive
