--- a/.github/workflows/expo-build-dev.yml
+++ b/.github/workflows/expo-build-dev.yml
@@ -1,7 +1,7 @@
-name: EAS Build - development
+name: EAS Android Build - development
 
 on:
-  pull_request:
+  push:
     branches: [ development ]
 
 jobs:
