BSA-16 - add react native paper dependency

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest --forceExit",
     "build": "npm run lint && npm run test",
     "build:android:develop": "npm run build && eas build --platform android --profile development --non-interactive",
+    "build:android:preview": "npm run build && eas build --platform android --profile preview --non-interactive",
     "build:android:production": "npm run build && eas build --platform android --profile production --non-interactive",
     "publish:develop": "npm run build && expo publish --release-channel develop",
     "publish:production": "npm run build && expo publish --release-channel production",
@@ -25,7 +26,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
-    "react-native-toast-message": "^2.1.5",
+    "react-native-paper": "^4.12.3",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
     "expo-constants": "~13.1.1",
@@ -37,7 +38,6 @@
     "expo-updates": "^0.13.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
-    "@rneui/base": "^4.0.0-rc.5",
     "redux": "^4.2.0",
     "@reduxjs/toolkit": "^1.8.3",
     "react-redux": "^8.0.2",
