--- a/.github/workflows/expo-build-dev.yml
+++ b/.github/workflows/expo-build-dev.yml
@@ -29,4 +29,4 @@ jobs:
         run: yarn install
 
       - name: 🚀 Build app
-        run: yarn run build:android:develop
+        run: yarn run build:android:preview
