--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-dev-client": "~1.0.1",
     "expo-file-system": "~14.0.0",
     "expo-splash-screen": "~0.15.1",
+    "expo-system-ui": "~1.2.0",
     "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.13.3",
