--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
     "react-native-paper": "^4.12.3",
+    "@react-native-community/datetimepicker": "6.1.2",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
     "expo-constants": "~13.1.1",
