--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
-    "react-native-paper": "^4.12.3",
-    "@react-native-community/datetimepicker": "6.1.2",
+    "react-native-paper": "^5.0.0-rc.3",
+    "@react-native-community/datetimepicker": "^6.1.2",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
     "expo-constants": "~13.1.1",
@@ -55,6 +55,7 @@
     "@types/react": "^18.0.15",
     "@types/react-native": "^0.69.3",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/react-native-datepicker": "^1.7.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "babel-eslint": "^10.1.0",
