--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^5.0.0-rc.3",
     "@react-native-community/datetimepicker": "^6.1.2",
     "expo": "~45.0.0",
