--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.7",
     "moment": "^2.29.4",
+    "randomcolor": "^0.6.2",
     "metro-minify-terser": "^0.71.3"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "@types/react-native-datepicker": "^1.7.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "@types/randomcolor": "^0.5.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^28.1.3",
     "babel-plugin-transform-typescript-metadata": "^0.2.2",
