--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-svg": "12.3.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^5.0.0-rc.3",
+    "react-native-calendars": "^1.1287.0",
     "@react-native-community/datetimepicker": "^6.1.2",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
