--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:android:develop": "npm run build && eas build --platform android --profile development --non-interactive",
     "build:android:preview": "npm run build && eas build --platform android --profile preview --non-interactive",
     "build:android:production": "npm run build && eas build --platform android --profile production --non-interactive",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "react": "17.0.2",
@@ -19,6 +20,7 @@
     "react-native-web": "0.17.7",
     "react-native-safe-area-context": "4.2.4",
     "react-native-reanimated": "~2.8.0",
+    "reanimated-collapsible-helpers": "^1.0.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
@@ -47,7 +49,8 @@
     "typeorm": "^0.3.7",
     "moment": "^2.29.4",
     "randomcolor": "^0.6.2",
-    "metro-minify-terser": "^0.71.3"
+    "metro-minify-terser": "^0.71.3",
+    "patch-package": "^6.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
