--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.13.3",
+    "expo-localization": "~13.0.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/drawer": "^6.4.3",
@@ -49,6 +50,7 @@
     "typeorm": "^0.3.7",
     "moment": "^2.29.4",
     "randomcolor": "^0.6.2",
+    "i18n-js": "^4.0.2",
     "metro-minify-terser": "^0.71.3",
     "patch-package": "^6.4.7"
   },
