--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ENVIRONMENT=develop expo start --dev-client",
+    "compile": "tsc --noEmit",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
     "test": "jest --forceExit",
-    "build": "npm run lint && npm run test",
+    "build": "npm run compile && npm run lint && npm run test",
     "build:android:develop": "npm run build && eas build --platform android --profile development --non-interactive",
     "build:android:preview": "npm run build && eas build --platform android --profile preview --non-interactive",
     "build:android:production": "npm run build && eas build --platform android --profile production --non-interactive",
