--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "basketball-shoot-around-app",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "start": "ENVIRONMENT=develop expo start --dev-client",
     "compile": "tsc --noEmit",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
-    "test": "jest",
+    "test": "jest /src --config jest-config.ts",
+    "e2e:android": "cucumber-js",
     "build": "npm run compile && npm run lint && npm run test",
-    "build:android:develop": "npm run build && eas build --platform android --profile development --non-interactive",
-    "build:android:preview": "npm run build && eas build --platform android --profile preview --non-interactive",
-    "build:android:production": "npm run build && eas build --platform android --profile production --non-interactive",
+    "build:android:develop": "npm run build && eas build --platform android --profile development --non-interactive --local",
+    "build:android:preview": "npm run build && eas build --platform android --profile preview --non-interactive --local",
+    "build:android:production": "npm run build && eas build --platform android --profile production --non-interactive --local",
     "typeorm": "typeorm-ts-node-commonjs",
     "postinstall": "patch-package"
   },
@@ -60,7 +62,6 @@
     "@types/react-native-datepicker": "^1.7.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
-    "@types/randomcolor": "^0.5.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^28.1.3",
     "babel-plugin-transform-typescript-metadata": "^0.2.2",
@@ -73,14 +74,9 @@
     "jest-expo": "^45.0.1",
     "react-native-testing-library": "2.2.0",
     "ts-jest": "^28.0.6",
+    "@cucumber/cucumber": "^8.5.1",
+    "webdriverio": "^7.21.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
-    ]
-  },
-  "private": true
+  }
 }
