--- a/package.json
+++ b/package.json
@@ -54,21 +54,16 @@
     "patch-package": "^6.4.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/jest": "^28.1.5",
+    "typescript": "^4.7.4",
+    "ts-node": "^10.9.1",
     "@types/react": "^18.0.15",
     "@types/react-native": "^0.69.3",
+    "@types/jest": "^28.1.5",
+    "@types/cucumber": "^7.0.0",
     "@types/react-test-renderer": "^18.0.0",
     "@types/react-native-datepicker": "^1.7.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^28.1.3",
-    "babel-plugin-transform-typescript-metadata": "^0.2.2",
-    "eslint": "^7.25.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-native": "^3.10.0",
     "jest": "^28.1.3",
     "jest-create-mock-instance": "^2.0.0",
     "jest-expo": "^45.0.1",
@@ -76,7 +71,13 @@
     "ts-jest": "^28.0.6",
     "@cucumber/cucumber": "^8.5.1",
     "webdriverio": "^7.21.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-native": "^3.10.0",
+    "@babel/core": "^7.12.9",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^28.1.3",
+    "babel-plugin-transform-typescript-metadata": "^0.2.2"
   }
 }
