--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "jest": "^28.1.3",
     "jest-create-mock-instance": "^2.0.0",
     "jest-expo": "^45.0.1",
-    "react-native-testing-library": "2.2.0",
+    "@testing-library/react-native": "^11.0.0",
+    "@testing-library/jest-native": "^4.0.11",
     "ts-jest": "^28.0.6",
     "@cucumber/cucumber": "^8.5.1",
     "webdriverio": "^7.21.0",
